# spinr

./: .dockerignore  .mise.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  dev.arm64.Dockerfile  dev.x86.Dockerfile  prod.arm64.Dockerfile  prod.x86.Dockerfile
.github/workflows/: release.yml
docs/: formal-verification.md  perfomance-fix.md
docs/github-issues/: 01-load-plan-types.md  02-response-byte-accounting-types.md  03-load-test-lifecycle-typestate.md  04-kani-load-plan-proof-suite.md  05-kani-chunked-decoder-proof-suite.md  06-kani-response-framing-proof-suite.md  07-tla-load-test-lifecycle-spec.md  08-tla-connection-fsm-spec.md  README.md
docs/prds/: prd-spinr-unified-cli-v1-2026-03-17.md
examples/: c32.toml
scripts/: continue-create-github-issues.sh  publish-github-issue-drafts.sh
spec/: ConnectionFSM.tla  LoadTestLifecycle.tla
src/: bench.rs  cli.rs  main.rs  output.rs
src/loadtest/: engine.rs  manager.rs  max_throughput.rs  mod.rs  orchestrator.rs  plan.rs  preflight.rs  request.rs  types.rs  worker.rs
src/mcp/: mod.rs  stdio.rs  transport.rs
src/trace/: mod.rs  tracer.rs  types.rs
tests/: bench.rs  cli_basics.rs  formal.rs  load_test.rs  trace.rs
tests/common/: mod.rs
